Backend: load input data from form
