# src/Wayfinder/API/Controllers/CoordinatesController.cs
@@ -1,3 +1,4 @@
+using System.Globalization;
 using API.Requests;
 using Domain;
 using Microsoft.AspNetCore.Mvc;
@@ -20,16 +21,29 @@ public class CoordinatesController : ControllerBase
     [HttpPost]
     public Coordinates? Post([FromBody] CoordinatesRequest request)
     {
-        //TODO: validate request
-        request.Point = new Point(-22.412260, -42.966400);
-        request.PolylinePoints = new List<Point>
-        {
-            new Point(-22.906847, -43.172897), 
-            new Point(-22.509911, -43.175480),
-            new Point(-21.764940, -43.348969), 
-            new Point(-20.139370, -44.886990),
-        };
-        var newCoordinates = _calculator.GetCoordinates(request.Point, request.PolylinePoints);
+        //request.Point = new Point(-22.412260, -42.966400);
+        var polylinePoints = _parseFile(request.PolylineFile);
+        var newCoordinates = _calculator.GetCoordinates(request.Point, polylinePoints);
         return newCoordinates;
+    }
+
+    private IList<Point> _parseFile(string fileContent)
+    {
+        var polylinePoints = new List<Point>();
+        var polylineValues = fileContent.Split("\r\n");
+        if (polylineValues != null && polylineValues.Any())
+        {
+            foreach (var pointValues in polylineValues)
+            {
+                var values = pointValues.Split(",");
+                double x,y;
+                Double.TryParse(values[0], NumberStyles.Float, CultureInfo.InvariantCulture, out x);
+                Double.TryParse(values[1], NumberStyles.Float, CultureInfo.InvariantCulture, out y);
+                var point = new Point(x, y);
+                polylinePoints.Add(point);
+            }
+        }
+
+        return polylinePoints;
     }
 }
