# src/Wayfinder/API/Requests/CoordinatesRequest.cs
@@ -5,5 +5,5 @@ namespace API.Requests;
 public class CoordinatesRequest
 {
     public Point Point { get; set; }
-    public IList<Point> PolylinePoints { get; set; }
+    public string PolylineFile { get; set; }
 }
